# r-r-challengue

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml
env/: env_docker.json  env_example.json
frontend/: package-lock.json  package.json
frontend/src/: index.css  main.jsx
frontend/src/api/: transactions.jsx
frontend/src/components/: AccountBalance.jsx  CreateTransactionButton.jsx  CreateTransactionModal.jsx  SearchBar.jsx  Toast.jsx  TransactionList.jsx
frontend/src/pages/: Transactions.jsx
init-db/: init.sql
src/: main.rs
src/api/: mod.rs  services.rs
src/configurations/: mod.rs
src/modules/: mod.rs
src/modules/transactions/: mod.rs  repository.rs  request.rs  response.rs  services.rs
src/modules/wallet/: mod.rs  services.rs  test.rs
