[package]
name = "r-r-challengue"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version="4.9.0", features = ["openssl"] }
actix-rt= "2.10.0"
chrono = { version = "0.4.39", features = ["serde"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = "1.42.0"
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }