[package]
name = "r-r-challengue"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version="4.10.2", features = ["openssl"] }
actix-rt= "2.10.0"
chrono = { version = "0.4.40", features = ["serde"]}
tracing = "0.1.41"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time", "rust_decimal"] }
rust_decimal = { version = "1.37.1", features = ["serde"] }
time = { version= "0.3.41", features = ["serde"] }
